# GIF4104-TPS

./: .gitignore  README.md
Remises/TP2/CodeLivrable/: submit_openmp_TP2.sh
Remises/TP2/CodeTest_NbThreads_NbIterations_Speciafiables/: submit_openmp_TP2_8_20.sh
Remises/TP3/: CMakeLists.txt
Remises/TP3/moab/: submit_TP3_1024.sh  submit_TP3_2048.sh  submit_TP3_512.sh
Remises/TP3/src/: main.cpp
Remises/TP4/OpenACC/: submit_openacc_16.sh
Remises/TP4/OpenACC/src/: Makefile  PngImage.cpp  PngImage.h
Remises/TP4/OpenCL/: CMakeCache.txt  cmake_install.cmake  tp4.sh
Remises/TP4/OpenCL/src/: main.cpp  seq_tp2.cpp
TP1/: CMakeLists.txt  Helper.cpp  Helper.h  LIEN VERS RAPPORT.txt  ThreadManager.cpp  ThreadManager.h  hello  hello.cpp  main.cpp  makefile  tp1
TP1/old/: main_old.cpp
TP2/: CMakeLists.txt  ThreadManager.cpp  ThreadManager.h  main.cpp  submit_openmp_TP2.sh
TP2/CodeLivrable/: notes.txt
TP2/CodeLivrable/src/: main.cpp
TP2/CodeTest_NbThreads_NbIterations_Speciafiables/: submit_openmp_TP2_8_20.sh
TP2/CodeTest_NbThreads_NbIterations_Speciafiables/include/: Filter.h
TP2/CodeTest_NbThreads_NbIterations_Speciafiables/src/: Filter.cpp  main.cpp
TP2/include/: Filter.h  PngImage.h  SequentialExecuter.hpp
TP2/src/: Filter.cpp  SequentialExecuter.cpp  main.cpp
TP3/: CMakeLists.txt
TP3/exemple/: cheat.cpp  main.cpp
TP3/include/: Matrix.hpp
TP3/src/: Matrix.cpp  Matrix.hpp  main.cpp  mainTest.cpp
TP4/: CMakeLists.txt  Makefile  seq.sh  test.sh  tp4  tp4.sh
TP4/check-compatibility/: compatibility-tester.c
TP4/cmake/: FindOpenCL.cmake
TP4/filters/: noyau_identite
TP4/include/: Filter.h
TP4/src/: Filter.cpp  convolve.cl  convolveNonOptimised.cl  convolveOpt.cl  main.cpp  test.cl
TP4_OpenACC/: CMakeLists.txt  Makefile  submit_openacc.sh  submit_openacc_2.sh  submit_openacc_2_11.sh  submit_openacc_4.sh  submit_openacc_4_11.sh  submit_openacc_8.sh  submit_openacc_8_11.sh
TP4_OpenACC/exemple/: seq_tp2.cpp
TP4_OpenACC/src/: Makefile  main.cpp  main_seq.cpp  submit_openacc.sh  tp4-openacc
TP5/: ArrayFileIndexWritable.java  FileIndexWritable.java  FileIndexWriteable.java  WordCount.java  clean_hdfs_and_submit.sh  compile.sh  filenameIndexWritable.java  hadoop_wordcount  launch.sh  magpie_hadoop.msub.ram  runLocal.sh
TP5/input/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
TP5/output/: .part-r-00000.crc
TP5/results/: IndexInverse.txt
TP5/scripts/: clean.sh  compile.sh  formatOutput.py  launch.sh  post.sh
